.golden/6097241206483808698/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:17:
  |
7 | main = [f|hello } world|]
  |                 ^
unexpected '}'
expecting "{{", "}}", '{', or end of input

    • In the quasi-quotation: [f|hello } world|]
  |
7 | main = [f|hello } world|]
  |           ^^^^^^^^^^^^^^^
